# az_resources

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
az_resources/: hosting.py
az_resources/models/: resource.py
az_resources/protocols/: i_resource_group_query.py
az_resources/services/: resource_group_query.py
outputs/: README.md
samples/: list_resources_in_rg.py
tests/az_resources/models/: test_resource.py
tests/az_resources/services/: test_resource_group_query.py
